--- a/tictactoe.html
+++ b/tictactoe.html
@@ -15,8 +15,8 @@
     <td></td>
   </tr>
   <tr align="center" height="200">
-    <td></td>
-    <td></td>
+    <td>kavi</td>
+    <td>kavi</td>
     <td></td>
   </tr>
 
