--- a/tictactoe.html
+++ b/tictactoe.html
@@ -6,7 +6,7 @@
 
 <tr align="center" height="200">
   <td width="300">Anirudh</td>
-  <td width="300">0</td>
+  <td width="300">Goyal</td>
   <td width="300"></td>
 </tr>
   <tr align="center" height="200">
