--- a/tictactoe.html
+++ b/tictactoe.html
@@ -11,12 +11,12 @@
 </tr>
   <tr align="center" height="200">
     <td>45</td>
-    <td>0jk</td>
+    <td>Anirudh</td>
     <td></td>
   </tr>
   <tr align="center" height="200">
     <td></td>
-    <td>0 jk</td>
+    <td>0jk</td>
     <td></td>
   </tr>
 
