--- a/tictactoe.html
+++ b/tictactoe.html
@@ -7,7 +7,7 @@
 <tr align="center" height="200">
   <td width="300">Anirudh</td>
   <td width="300">Goyal</td>
-  <td width="300"></td>
+  <td width="300">kavi</td>
 </tr>
   <tr align="center" height="200">
     <td>45</td>
@@ -17,7 +17,7 @@
   <tr align="center" height="200">
     <td></td>
     <td>0jk</td>
-    <td></td>
+    <td>kavi</td>
   </tr>
 
 <!-- Do not move this table content into multiple lines; keep it in a single line to create conflicts -->
