--- a/tictactoe.html
+++ b/tictactoe.html
@@ -12,7 +12,7 @@
   <tr align="center" height="200">
     <td>45</td>
     <td>Anirudh</td>
-    <td></td>
+    <td>goyal</td>
   </tr>
   <tr align="center" height="200">
     <td></td>
