--- a/tictactoe.html
+++ b/tictactoe.html
@@ -17,7 +17,7 @@
   <tr align="center" height="200">
     <td></td>
     <td>0jk</td>
-    <td>kavi</td>
+    <td>kai</td>
   </tr>
 
 <!-- Do not move this table content into multiple lines; keep it in a single line to create conflicts -->
