--- a/tictactoe.html
+++ b/tictactoe.html
@@ -15,7 +15,7 @@
     <td>goyal</td>
   </tr>
   <tr align="center" height="200">
-    <td></td>
+    <td>JamunaQ</td>
     <td>0jk</td>
     <td>kai</td>
   </tr>
